# apps/example/src/pages/api/v1/todos/index.ts
@@ -1,77 +1,52 @@
+import { MOCK_TODOS, todoSchema } from '@/utils';
 import { apiRoute, apiRouteOperation } from 'next-rest-framework';
 import { z } from 'zod';
 
-const TODOS = [
-  {
-    id: 1,
-    name: 'TODO 1',
-    completed: false
-  }
-];
-
-// Example pages router API route with GET/POST handlers.
 export default apiRoute({
   getTodos: apiRouteOperation({
-    method: 'GET',
-    // Optional OpenAPI operation documentation.
-    openApiOperation: {
-      tags: ['example-api', 'todos', 'pages-router']
-    }
+    method: 'GET'
   })
-    // Output schema for strictly-typed responses and OpenAPI documentation.
     .outputs([
       {
         status: 200,
         contentType: 'application/json',
-        schema: z.array(
-          z.object({
-            id: z.number(),
-            name: z.string(),
-            completed: z.boolean()
-          })
-        )
+        body: z.array(todoSchema)
       }
     ])
     .handler((_req, res) => {
-      // Type-checked response.
-      res.status(200).json(TODOS);
+      res.status(200).json(MOCK_TODOS);
     }),
 
   createTodo: apiRouteOperation({
-    method: 'POST',
-    // Optional OpenAPI operation documentation.
-    openApiOperation: {
-      tags: ['example-api', 'todos', 'pages-router']
-    }
+    method: 'POST'
   })
-    // Input schema for strictly-typed request, request validation and OpenAPI documentation.
     .input({
       contentType: 'application/json',
       body: z.object({
         name: z.string()
       })
     })
-    // Output schema for strictly-typed responses and OpenAPI documentation.
     .outputs([
       {
         status: 201,
         contentType: 'application/json',
-        schema: z.string()
+        body: z.string()
       },
       {
         status: 401,
         contentType: 'application/json',
-        schema: z.string()
+        body: z.string()
       }
     ])
     // Optional middleware logic executed before request validation.
     .middleware((req, res) => {
-      if (!req.headers.authorization) {
-        res.status(401).json('Unauthorized'); // Type-checked response.
+      if (!req.headers['very-secure']) {
+        res.status(401).json('Unauthorized');
       }
     })
     .handler((req, res) => {
-      const { name } = req.body; // Strictly-typed request.
-      res.status(201).json(`New TODO created: ${name}`); // Type-checked response.
+      const { name } = req.body;
+      // Create a new TODO.
+      res.status(201).json(`New TODO created: ${name}`);
     })
 });
